feat: 添加CAPI接口实现
